--- a/index.html
+++ b/index.html
@@ -29,6 +29,46 @@
 </div>
 </header>
 <main>
+  <section class="whatwegive">
+    <div class="container">
+      <div class="row">
+        <div class="data">
+    <span>WHAT WE GIVE</span>
+      <h3>What do You Get From Us</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+    </div>
+    <div class="frame">
+      <div class="frame-item frame1">
+        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+          <path d="M7.30882 6.91793C8.37335 6.91793 9.23632 6.05496 9.23632 4.99043C9.23632 3.9259 8.37335 3.06293 7.30882 3.06293C6.24429 3.06293 5.38132 3.9259 5.38132 4.99043C5.38132 6.05496 6.24429 6.91793 7.30882 6.91793Z" stroke="#F0C932" stroke-width="0.658976" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M10.8509 11.7395C11.2134 11.7395 11.4934 11.388 11.3781 11.0366C10.8235 9.31774 9.21449 8.07118 7.30896 8.07118C5.40342 8.07118 3.79442 9.31774 3.23978 11.0366C3.12995 11.3825 3.40453 11.7395 3.76696 11.7395H10.8509Z" stroke="#F0C932" stroke-width="0.658976" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <h4>Professional Teacher</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+      </div>
+      <div class="frame-item frame2">
+        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+          <path d="M11.4614 5.89651L6.90353 7.61534C6.70584 7.69222 6.49167 7.69222 6.29398 7.61534L1.73606 5.89651C1.49444 5.80865 1.49444 5.47916 1.73057 5.3858L6.28849 3.66697C6.48618 3.59009 6.70035 3.59009 6.89804 3.66697L11.456 5.3858C11.6921 5.47367 11.6921 5.80865 11.4614 5.89651Z" stroke="#F0C932" stroke-width="0.658976" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M1.55496 5.64386V8.46098" stroke="#F0C932" stroke-width="0.658976" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M3.11444 6.52258V9.97671C3.11444 10.4764 4.67402 10.8883 6.59603 10.8883C8.51804 10.8883 10.0776 10.4819 10.0776 9.97671V6.52258" stroke="#F0C932" stroke-width="0.658976" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <h4>Course Certificate</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+      </div>
+      <div class="frame-item frame3">
+        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+          <path d="M7.11402 4.66635L7.43802 5.42418C7.45999 5.49007 7.52039 5.52851 7.5808 5.534L8.40452 5.61089C8.58025 5.62736 8.64614 5.84153 8.51984 5.95685L7.8993 6.5005C7.84988 6.54443 7.82791 6.61033 7.84439 6.67074L8.02561 7.47798C8.06405 7.64822 7.88283 7.78001 7.72907 7.69215L7.02067 7.26931C6.96575 7.23636 6.89437 7.23636 6.83945 7.26931L6.13105 7.69215C5.98278 7.78001 5.79607 7.64822 5.83451 7.47798L6.01573 6.67074C6.03221 6.61033 6.01024 6.54443 5.96082 6.5005L5.34028 5.95685C5.20849 5.84153 5.27988 5.62736 5.4556 5.61089L6.27932 5.534C6.34522 5.52851 6.40013 5.49007 6.42759 5.42967L6.75159 4.67185C6.81748 4.5071 7.04263 4.5071 7.11402 4.66635Z" stroke="#F0C932" stroke-width="0.549146" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M10.6655 6.27242C10.6797 4.21008 9.01937 2.52672 6.95703 2.51252C4.89469 2.49833 3.21132 4.15868 3.19713 6.22102C3.18294 8.28336 4.84329 9.96672 6.90563 9.98091C8.96797 9.99511 10.6513 8.33476 10.6655 6.27242Z" stroke="#F0C932" stroke-width="0.549146" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M6.42208 9.94364L5.49402 12.2775L4.31885 10.9321L2.5451 11.0969L3.72028 8.15343" stroke="#F0C932" stroke-width="0.549146" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M7.43254 9.94366L8.36609 12.2775L9.53577 10.9321L11.315 11.0969L10.1343 8.15344" stroke="#F0C932" stroke-width="0.549146" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <h4>interesting learning</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+      </div>
+    </div>
+  </div>
+  </div>
+  </section>
   <section class="selected">
     <div class="container">
       <div class="row">
