--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
 </div>
 </header>
 <main>
+  <section class="start">
+    <div class="container">
+      <div class="row">
+        <div class="part1">
+        <div class="info">
+          <span class="letsb">Let’s<span class="begins"> Begins</span> </span>
+        <h2>Let's Find The Right <span class="stc">Course</span> For you</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
+      </div>
+      <div class="linker">
+        <a class="Register" href="#">Register</a>
+        <a class="Play Video" href="#">Play Video</a>
+        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
+          <circle cx="7.48227" cy="7.45865" r="6.58976" fill="#F0C932"/>
+          <path d="M10.4682 7.45861L6.14367 9.95538V4.96184L10.4682 7.45861Z" fill="white"/>
+        </svg>
+      </div>
+      <div class="part2">
+        <img src="img/start/1.png">
+      </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
   <section class="whatwegive">
     <div class="container">
       <div class="row">
