add start again

--- a/index.html
+++ b/index.html
@@ -39,20 +39,18 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim, sem non convallis molestie.</p>
       </div>
       <div class="linker">
+        <div class="row">
         <a class="Register" href="#">Register</a>
-        <a class="Play Video" href="#">Play Video</a>
-        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
-          <circle cx="7.48227" cy="7.45865" r="6.58976" fill="#F0C932"/>
-          <path d="M10.4682 7.45861L6.14367 9.95538V4.96184L10.4682 7.45861Z" fill="white"/>
-        </svg>
+        <a class="playvideo" href="#"><img src="img/playvideo.svg"> Play Video</a>
       </div>
-      <div class="part2">
-        <img src="img/start/1.png">
-      </div>
-        </div>
       </div>
     </div>
-  </div>
+    </div>
+      <div class="part2">
+        <img src="img/start/Group 6 (2).png">
+      </div>
+      </div>
+    </div>
   </section>
   <section class="whatwegive">
     <div class="container">
